bug: overlap fixed

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,5 @@
 .container {
     margin: 2rem;
-    height: 500px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
